# chess

./: CMakeLists.txt  README.md
include/: chess_model.hpp
source/: chess_model.cpp  main.cpp
